// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users can be created/updated/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "email": Any<String>,
      "emailVerifiedAt": Any<Date>,
      "id": Any<String>,
      "name": "Robin Wayne",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deleteUser": Object {
      "email": Any<String>,
      "emailVerifiedAt": null,
      "id": Any<String>,
      "name": "Dark Knight",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "user": Object {
      "email": Any<String>,
      "emailVerifiedAt": Any<Date>,
      "id": Any<String>,
      "name": "Robin Wayne",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "email": Any<String>,
      "emailVerifiedAt": null,
      "id": Any<String>,
      "name": "Dark Knight",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can reset user password 1`] = `
Object {
  "data": Object {
    "createSession": Object {
      "token": Any<String>,
      "user": ObjectContaining {
        "email": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can reset user password 2`] = `
Object {
  "data": Object {
    "resetUserPassword": Object {
      "email": Any<String>,
      "emailVerifiedAt": Any<Date>,
      "id": Any<String>,
      "name": "Robin Wayne",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can reset user password 3`] = `
Object {
  "data": Object {
    "createSession": Object {
      "token": Any<String>,
      "user": ObjectContaining {
        "email": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
